[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/scenes/main/title_screen/level_select/level_select.gd" type="Script" id=1]
[ext_resource path="res://ui/assets/art/fonts/typewriter.tres" type="DynamicFont" id=2]
[ext_resource path="res://game/assets/art/backgrounds/HYMN BG 2 Final.png" type="Texture" id=3]
[ext_resource path="res://game/assets/art/backgrounds/HYMN BG 1 Final.png" type="Texture" id=4]
[ext_resource path="res://game/assets/sound/music/level_1/growth_draft.ogg" type="AudioStream" id=5]
[ext_resource path="res://game/assets/sound/music/level_2/decay_ost.ogg" type="AudioStream" id=6]
[ext_resource path="res://ui/assets/art/backgrounds/Hymn_BG 3 Dark.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.682353, 0.152941, 0.588235 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.517647, 0.0980392, 0.0980392, 0.686275 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.392157 )

[node name="LevelSelect" type="Control"]
script = ExtResource( 1 )

[node name="Backgrounds" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Default" type="TextureRect" parent="Backgrounds"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 7 )

[node name="Growth" type="TextureRect" parent="Backgrounds"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )

[node name="Decay" type="TextureRect" parent="Backgrounds"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 4 )

[node name="Content" type="MarginContainer" parent="."]
margin_right = 1916.0
margin_bottom = 1076.0
custom_constants/margin_right = 250
custom_constants/margin_top = 25
custom_constants/margin_left = 250
custom_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="Content"]
margin_left = 250.0
margin_top = 25.0
margin_right = 1666.0
margin_bottom = 926.0

[node name="Buttons" type="VBoxContainer" parent="Content/VBoxContainer"]
margin_right = 1416.0
margin_bottom = 901.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="Growth" type="MarginContainer" parent="Content/VBoxContainer/Buttons"]
margin_right = 1416.0
margin_bottom = 267.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="GrowthButton" type="Button" parent="Content/VBoxContainer/Buttons/Growth"]
margin_left = 100.0
margin_right = 1316.0
margin_bottom = 267.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Growth"

[node name="Decay" type="MarginContainer" parent="Content/VBoxContainer/Buttons"]
margin_top = 317.0
margin_right = 1416.0
margin_bottom = 584.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="DecayButton" type="Button" parent="Content/VBoxContainer/Buttons/Decay"]
margin_left = 100.0
margin_right = 1316.0
margin_bottom = 267.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Locked"

[node name="Back" type="MarginContainer" parent="Content/VBoxContainer/Buttons"]
margin_top = 634.0
margin_right = 1416.0
margin_bottom = 901.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="BackButton" type="Button" parent="Content/VBoxContainer/Buttons/Back"]
margin_left = 100.0
margin_right = 1316.0
margin_bottom = 267.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Back"

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="Default" type="AudioStreamPlayer2D" parent="Music"]
visible = false

[node name="Growth" type="AudioStreamPlayer2D" parent="Music"]
visible = false
stream = ExtResource( 5 )

[node name="Decay" type="AudioStreamPlayer2D" parent="Music"]
visible = false
stream = ExtResource( 6 )

[connection signal="mouse_entered" from="Content/VBoxContainer/Buttons/Growth/GrowthButton" to="." method="_on_GrowthButton_mouse_entered"]
[connection signal="mouse_exited" from="Content/VBoxContainer/Buttons/Growth/GrowthButton" to="." method="_on_GrowthButton_mouse_exited"]
[connection signal="pressed" from="Content/VBoxContainer/Buttons/Growth/GrowthButton" to="." method="_on_GrowthButton_pressed"]
[connection signal="mouse_entered" from="Content/VBoxContainer/Buttons/Decay/DecayButton" to="." method="_on_DecayButton_mouse_entered"]
[connection signal="mouse_exited" from="Content/VBoxContainer/Buttons/Decay/DecayButton" to="." method="_on_DecayButton_mouse_exited"]
[connection signal="pressed" from="Content/VBoxContainer/Buttons/Decay/DecayButton" to="." method="_on_DecayButton_pressed"]
[connection signal="pressed" from="Content/VBoxContainer/Buttons/Back/BackButton" to="." method="_on_BackButton_pressed"]
